--- a/Makefile.f4
+++ b/Makefile.f4
@@ -12,6 +12,9 @@ PX4_BOOTLOADER_DELAY	?= 5000
 
 SRCS		 = $(COMMON_SRCS) main_f4.c
 
+OBJS		:= $(patsubst %.c,%.o,$(SRCS))
+DEPS		:= $(OBJS:.o=.d)
+
 FLAGS		+= -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 \
        -DTARGET_HW_$(TARGET_HW) \
        -DSTM32F4 \
@@ -25,8 +28,13 @@ BINARY		 = $(TARGET_FILE_NAME).bin
 
 all:		$(ELF) $(BINARY)
 
-$(ELF):		$(SRCS) $(MAKEFILE_LIST)
-	$(CC) -o $@ $(SRCS) $(FLAGS)
+# Compile and generate dependency files
+$(OBJS):	$(SRCS)
+	$(CC) -c $(FLAGS) $*.c -o $*.o
+	$(CC) -MM $(FLAGS) $*.c > $*.d
+
+$(ELF):		$(OBJS) $(MAKEFILE_LIST)
+	$(CC) -o $@ $(OBJS) $(FLAGS)
 
 $(BINARY):	$(ELF)
 	$(OBJCOPY) -O binary $(ELF) $(BINARY)
@@ -41,3 +49,6 @@ flash-bootloader:
 # build openocd with "cd openocd; ./bootstrap; ./configure --enable-maintainer-mode --enable-stlink"
 upload-discovery: 
 	$(OPENOCD) --search ../px4_bootloader -f board/stm32f4discovery.cfg -c init -c "reset halt" -c "flash probe 0" -c "stm32f2x mass_erase 0" -c "flash write_image erase $(BINARY) 0x08000000" -c "reset" -c shutdown
+
+# Dependencies for .o files
+-include $(DEPS)
