--- a/Makefile.f1
+++ b/Makefile.f1
@@ -12,9 +12,6 @@ PX4_BOOTLOADER_DELAY	?= 3000
 
 SRCS		 = $(COMMON_SRCS) main_f1.c
 
-OBJS		:= $(patsubst %.c,%.o,$(SRCS))
-DEPS		:= $(OBJS:.o=.d)
-
 FLAGS		+= -mthumb -mcpu=cortex-m3\
        -DTARGET_HW_$(TARGET_HW) \
        -DSTM32F1 \
@@ -22,27 +19,13 @@ FLAGS		+= -mthumb -mcpu=cortex-m3\
 		   -L$(LIBOPENCM3)/lib \
 		   -lopencm3_stm32f1
 
-ELF		 = $(TARGET_FILE_NAME).elf
-BINARY		 = $(TARGET_FILE_NAME).bin
-
-all:		$(ELF) $(BINARY)
-
-# Compile and generate dependency files
-$(OBJS):	$(SRCS)
-	$(CC) -c $(FLAGS) $*.c -o $*.o
-	$(CC) -MM $(FLAGS) $*.c > $*.d
-
-$(ELF):		$(OBJS) $(MAKEFILE_LIST)
-	$(CC) -o $@ $(OBJS) $(FLAGS)
-
-$(BINARY):	$(ELF)
-	$(OBJCOPY) -O binary $(ELF) $(BINARY)
+#
+# General rules for making dependency and object files
+# This is where the compiler is called
+#
 
 #upload: all flash flash-bootloader
 upload: all flash-bootloader
 
 flash-bootloader:
 	$(OPENOCD) --search ../px4_bootloader -f $(JTAGCONFIG) -f stm32f1.cfg -c init -c "reset halt" -c "flash write_image erase $(BINARY)" -c "reset run" -c shutdown
-
-# Dependencies for .o files
--include $(DEPS)
