Adds individual build directories for each bootloader
This resolves the issue where the dependencies for .o files
would be met and the object file is not rebuilt for a new target,
even though the build flags might have changed; this is the case
when compiling for an F4 board compared to an F1 board.

--- a/Makefile.f1
+++ b/Makefile.f1
@@ -23,9 +23,10 @@ FLAGS		+= -mthumb -mcpu=cortex-m3\
 # General rules for making dependency and object files
 # This is where the compiler is called
 #
+include rules.mk
 
 #upload: all flash flash-bootloader
 upload: all flash-bootloader
 
 flash-bootloader:
-	$(OPENOCD) --search ../px4_bootloader -f $(JTAGCONFIG) -f stm32f1.cfg -c init -c "reset halt" -c "flash write_image erase $(BINARY)" -c "reset run" -c shutdown
+	$(OPENOCD) --search ../px4_bootloader -f $(JTAGCONFIG) -f stm32f1.cfg -c init -c "reset halt" -c "flash write_image erase $(BUILD_DIR)/$(BINARY)" -c "reset run" -c shutdown
