Fixes compiling in build directory with auto dependencies
This commit solves the following issues related to why the executable would
continue to be rebuild even when no changes to files had been made. The reasons
for this are as follows:
 - When the object files were created they did not use the dependency files
   (the -M or -MM option)
 - The targets for the object files and ELF and binary files did not exist,
   so the object target would always be rebuilt.

--- a/Makefile.f1
+++ b/Makefile.f1
@@ -29,4 +29,4 @@ include rules.mk
 upload: all flash-bootloader
 
 flash-bootloader:
-	$(OPENOCD) --search ../px4_bootloader -f $(JTAGCONFIG) -f stm32f1.cfg -c init -c "reset halt" -c "flash write_image erase $(BUILD_DIR)/$(BINARY)" -c "reset run" -c shutdown
+	$(OPENOCD) --search ../px4_bootloader -f $(JTAGCONFIG) -f stm32f1.cfg -c init -c "reset halt" -c "flash write_image erase $(BINARY)" -c "reset run" -c shutdown
