--- a/Makefile.f7
+++ b/Makefile.f7
@@ -32,4 +32,4 @@ include rules.mk
 upload: all flash-bootloader
 
 flash-bootloader:
-	$(OPENOCD) --search ../px4_bootloader -f $(JTAGCONFIG) -f stm32f4x.cfg -c init -c "reset halt" -c "flash write_image erase $(BUILD_DIR)/$(BINARY) 0x08000000" -c "reset run" -c shutdown
+	$(OPENOCD) --search ../px4_bootloader -f $(JTAGCONFIG) -f stm32f4x.cfg -c init -c "reset halt" -c "flash write_image erase $(BINARY) 0x08000000" -c "reset run" -c shutdown
