--- a/USBS/usbs_px4fmuv4_bl/Makefile.f4
+++ b/USBS/usbs_px4fmuv4_bl/Makefile.f4
@@ -14,7 +14,8 @@ PX4_BOOTLOADER_DELAY	?= 5000
 #SRCS_DIR     = usbs_px4fmuv4_bl
 SRCS_DIR     = $(USBS_SRC_DIR)
 #SRCS		 = $(COMMON_SRCS) main_f4.c
-SRCS		 = $(COMMON_SRCS) main_f4.c $(SRCS_DIR)/vectors.c $(SRCS_DIR)/tea.c
+#SRCS		 = $(COMMON_SRCS) main_f4.c $(SRCS_DIR)/vectors.c $(SRCS_DIR)/tea.c $(SRCS_DIR)/safe.c
+SRCS		 = $(COMMON_SRCS_USBS) $(SRCS_DIR)/main_f4.c $(SRCS_DIR)/vectors.c $(SRCS_DIR)/tea.c
 
 OBJS		:= $(patsubst %.c,%.o,$(SRCS))
 DEPS		:= $(OBJS:.o=.d)
@@ -26,6 +27,9 @@ FLAGS		+= -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 \
 		   -L$(LIBOPENCM3)/lib \
 		   -lopencm3_stm32f4 \
         $(EXTRAFLAGS)
+
+FLAGS		+= -I$(USBS_BL_DIR)/$(SRCS_DIR)
+#FLAGS		+= -I$(USBS_BL_DIR)
 
 #
 # General rules for making dependency and object files
