--- a/USBS/usbs_px4fmuv4_bl_update/Makefile.f4
+++ b/USBS/usbs_px4fmuv4_bl_update/Makefile.f4
@@ -1,3 +1,13 @@
+#/******************** (C) COPYRIGHT 2018 merafour ********************
+#* Author             : 冷月追风@merafour.blog.163.com
+#* Version            : V2.0.0
+#* Date               : 30/8/2018
+#* Description        : Makefile.
+#********************************************************************************
+#* merafour.blog.163.com
+#* merafour@163.com
+#* github.com/Merafour
+#*******************************************************************************/
 #
 # PX4 bootloader build rules for STM32F4 targets.
 #
