--- a/Makefile.f4
+++ b/Makefile.f4
@@ -19,7 +19,7 @@ FLAGS		+= -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 \
        -DTARGET_HW_$(TARGET_HW) \
        -DSTM32F4 \
        -T$(LINKER_FILE) \
-		   -L$(LIBOPENCM3)/lib \
+		   -L$(LIBOPENCM3)/lib/stm32/F4 \
 		   -lopencm3_stm32f4 \
         $(EXTRAFLAGS)
 
