--- a/Makefile.f7
+++ b/Makefile.f7
@@ -17,9 +17,14 @@ LIBS			= opencm3_stm32f7 opencm3_stm32f4
 
 FLAGS			+= -g -mthumb -mcpu=cortex-m7 -mfloat-abi=hard -mfpu=fpv5-sp-d16 \
 				-DTARGET_HW_$(TARGET_HW) \
+				-DSTM32F7 \
 				-T$(LINKER_FILE) \
-				-L$(LIBOPENCM3)/lib $(addprefix -l, $(LIBS)) \
-				-DSTM32F7
+					-L$(LIBOPENCM3)/lib/stm32/F7 \
+					-lopencm3_stm32f7 \
+				-T$(LINKER_FILE) \
+					-L$(LIBOPENCM3)/lib/stm32/F4 \
+					-lopencm3_stm32f4 \
+				$(EXTRAFLAGS)
 
 # libopencm3 doesn't have USB driver in stm32f7 library, tell it to use the one from stm32f4
 # for the cdcacm
