--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,10 +3,11 @@ name: Build and Deploy
 on:
   push:
     branches:
-    - 'master'
+      - 'main'
+      - 'master'
   pull_request:
     branches:
-    - '*'
+      - '*'
 
 
 jobs:
